tests/fixtures/invalid/pow_float_str_bytes.py
# Cannot call pow() with Float, Str, Bytes
x = pow(1.0, "hello", b"hello")
